force-app/main/default/objects/UCB_Logger__c/UCB_Logger__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>logger for UCBexception</description>
    <label>UCB Logger</label>
</CustomObject>