force-app/main/default/objects/UCB_Logger__c/fields/Logger_Type__c.field-meta.xml
<CustomField>
    <fullName>Logger_Type__c</fullName>
    <description>Logger Type</description>
    <inlineHelpText>Logger Type</inlineHelpText>
    <label>Logger Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>