force-app/main/default/objects/UCB_Logger__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>Process</description>
    <inlineHelpText>Process</inlineHelpText>
    <label>Process</label>
    <length>100</length>
    <type>Text</type>
</CustomField>