force-app/main/default/objects/UCB_Logger__c/fields/Publish__c.field-meta.xml
<CustomField>
    <fullName>Publish__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Publish logs</description>
    <inlineHelpText>Publish logs</inlineHelpText>
    <label>Publish</label>
    <type>Checkbox</type>
</CustomField>