force-app/main/default/objects/UCB_Logger__c/listViews/Logger.listView-meta.xml
<ListView>
    <fullName>Logger</fullName>
    <columns>NAME</columns>
    <columns>Logger_Type__c</columns>
    <columns>Publish__c</columns>
    <columns>Process__c</columns>
    <filterScope>Everything</filterScope>
    <label>Logger</label>
</ListView>